Bug 11776 - ntlm_auth --use-cached-creds does not work
Summary: ntlm_auth --use-cached-creds does not work
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Tools (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Stefan Metzmacher
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-07 15:59 UTC by Stefan Metzmacher
Modified: 2016-04-13 15:10 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2016-03-07 15:59:22 UTC
It always reports NT_STATUS_MORE_PROCESSING_REQUIRED to the caller,
instead of NT_STATUS_OK.
Comment 1 Stefan Metzmacher 2016-04-13 15:10:31 UTC
The fixes are in v4-{2,3,4}-{stable,test} and master.